tests/ui/ferrocene/compiler-arguments/upper_l/upper_l_framework_no-dir.rs
//@ check-fail
//@ compile-flags: -L framework=
//~? ERROR empty search path

fn main() {}

// ferrocene-annotations: um_rustc_L
